# free-to-meaningful

./: .dockerignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
date/: Cargo.toml
date/src/: lib.rs
tests/: aws.rss
tests/trend/: dockercompose.yml  init.sql
todo/: Dockerfile
todo/src/: lib.rs
trend/: Cargo.toml  Dockerfile
trend/src/: domain.rs  lib.rs  main.rs  raw.rs  remote.rs  repository.rs  rss.rs  use_case.rs
trend/src/raw/: rss.rs
user/src/: lib.rs
