[package]
name = "trend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.5" }
date = {path="../date"}
user = {path="../user"}