[package]
name = "trend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "2.0"
tokio = { version = "1.38.0", features = ["full"] }
reqwest = { version = "0.12.5",features = ["rustls-tls"] }
date = {path="../date"}
user = {path="../user"}
axum = { version = "0.7.5"  }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"